Add custom exceptions in case of cluster api/connectivity failures (#1043)
* Add custom exceptions in case of cluster api/connectivity failures

Signed-off-by: muralibasani <muralidahr.basani@aiven.io>

* Save cluster api url, renaming of getMethods

Signed-off-by: muralibasani <muralidahr.basani@aiven.io>

* fix compile err

Signed-off-by: muralibasani <muralidahr.basani@aiven.io>

* fix compile err

Signed-off-by: muralibasani <muralidahr.basani@aiven.io>

* Fix compile err

Signed-off-by: muralibasani <muralidahr.basani@aiven.io>

* Adding constants, pr comments

Signed-off-by: muralibasani <muralidahr.basani@aiven.io>

* Response model for testclusterapi

Signed-off-by: muralibasani <muralidahr.basani@aiven.io>

* 🤖 Auto-update API types for TypeScript usage

---------

Signed-off-by: muralibasani <muralidahr.basani@aiven.io>
Co-authored-by: muralibasani <muralidahr.basani@aiven.io>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>